# GildedRose-ERT-toolset

./: .gitignore  pyproject.toml
src/gilded_rose/: _version.py
tests/gilded_rose/: test_gilded_rose.py
texttests/: config.gr
